# bd-hw-1

./: README.md  local.env  pyproject.toml
migration/: env.py
migration/versions/: f19a8e474ada_drop_cols.py  f87a7a0e790a_init.py
src/: config.py  etl.py  models.py  repositories.py  tables.py
